cabal-version: 3.0
name:          halumi
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
author:        Johannes Maier
maintainer:    johannes.maier@mailbox.org
build-type:    Simple

common common-options
  ghc-options:        -Wall
  default-extensions:
    NoFieldSelectors
    OverloadedRecordDot

library
  import:           common-options
  exposed-modules:
    Halumi.Buffer
    Halumi.Main

  build-depends:
    , base
    , hscurses
    , hslua

  hs-source-dirs:   src-lib
  default-language: GHC2024

executable halumi
  import:           common-options
  main-is:          Main.hs
  build-depends:
    , base
    , halumi

  hs-source-dirs:   src-exe
  default-language: GHC2024

test-suite halumi-test
  import:           common-options
  default-language: GHC2024
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base
    , halumi
